--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ html, body {
 
 body {
 	background-color: #2f2f2f;
-	font-family: "Titillium Web", sans-serif;
+	font-family: "Titillium Web","Microsoft YaHei",Tahoma,Verdana,"SimSun","Hiragino Sans GB","Microsoft YaHei","WenQuanYi Micro Hei", sans-serif;
 	font-weight: normal;
 	overflow-x: hidden;
 	-webkit-font-smoothing: antialiased !important;
