--- a/css/style.css
+++ b/css/style.css
@@ -8,17 +8,17 @@
  */
  
 .font-thin {
-	font-family: "Titillium Web", sans-serif;
+	font-family: "Titillium Web","Microsoft YaHei",Tahoma,Verdana,"SimSun", sans-serif;
 	font-weight: 200;
 }
 
 .font-semibold {
-	font-family: "Titillium Web", sans-serif;
+	font-family: "Titillium Web","Microsoft YaHei",Tahoma,Verdana,"SimSun", sans-serif;
 	font-weight: 600;
 }
 
 .font-light {
-	font-family: "Titillium Web", sans-serif;
+	font-family: "Titillium Web","Microsoft YaHei",Tahoma,Verdana,"SimSun", sans-serif;
 	font-weight: 300;
 }
 
@@ -65,7 +65,7 @@ body {
 
 .navbar .nav a {
 	color: #5f5f5f;
-	font-family: "Titillium Web", sans-serif;
+	font-family: "Titillium Web", "Microsoft YaHei",Tahoma,Verdana,"SimSun",sans-serif;
 	font-weight: 600;
 	transition: all .5 linear;
 }
