--- a/css/style.css
+++ b/css/style.css
@@ -241,6 +241,7 @@ body {
     width: 100%;
 	background-attachment: relative;
 	background-position: center center;
+	-webkit-transform: tanslate3d(0,0,0);
 }
 
 #slide-1 i{
