--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,8 @@ body {
 	transition: all .5 linear;
 	width: 1%;
 	z-index: 9;
+	transform:  translate3d(0,0,0);
+	-webkit-transform:  translate3d(0,0,0);
 }
 
 .inv .active-menu {
@@ -571,11 +573,13 @@ a,a:hover,a:focus,a:active,a:link {
 	width: 30px;
 }
 #arrows>.share-button{
-	display: none !important;
+	background-image: none !important;
+	opacity: 0;
 	bottom: 80px;
+	transition: opacity .5s ease;
 }
 #arrows:hover>.share-button{
-	display: block !important;
+	opacity: 1;
 }
 #arrows div.disabled {
 	cursor: default;
